# libaurex-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.py  build.rs
src/: aurex.rs  dart_bindings.rs  decoding_loop.rs  engine.rs  engine_old.rs  enums.rs  extern_c_bindings.rs  ffi.rs  lib.rs  main.rs  singletons.rs  structs.rs
src/api/: flutter_aurex.rs  mod.rs
