#ffmpeg 7.1.1
[package]
name = "libaurex"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
description = "Cross-platform high-level audio API"
documentation = "https://docs.rs/libaurex-rs"
readme = "README.md"
repository = "https://github.com/libaurex/libaurex-rs"
keywords = ["audio", "sound", "api"]
categories = ["multimedia"]

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
cc = "1.2.31"
vcpkg = "0.2.15"
uniffi = { version = "0.30.0", features = [ "build" ] }

[dependencies]
bytemuck = "1.23.2"
crossbeam-channel = "0.5.15"
ffmpeg-next = "7.1.0"
miniaudio_aurex = "0.11.22"
soxr = "0.6.0"
tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"]}
uniffi = { version = "0.30.0", features = [ "cli" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
