#ffmpeg 7.1.1
[package]
name = "libaurex"
version = "0.1.6"
edition = "2024"
license = "Apache-2.0"
description = "Cross-platform high-level audio API"
documentation = "https://docs.rs/libaurex-rs"
readme = "README.md"
repository = "https://github.com/libaurex/libaurex-rs"
keywords = ["audio", "sound", "api"]
categories = ["multimedia"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
vcpkg = "0.2.15"
uniffi = { version = "0.30.0", features = [ "build" ] }

[dependencies]
bytemuck = "1.23.2"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
dart-sys = "4.1.5"
ffmpeg-next = "7.1.0"
soxr = "0.6.0"
tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"]}
uniffi = { version = "0.30.0", features = [ "cli" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
